# lflxp-music

./: .air.toml  .env  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  package.json  vue.config.js
cmd/: root.go
core/: settings.go
core/asset/music/: index.html
core/asset/music/css/: 197.7d7b45ff.css  221.ab426c07.css  574.62be5912.css
core/asset/music/js/: 140-legacy.0941e1c2.js  140-legacy.0941e1c2.js.map  140.ebe23f88.js  140.ebe23f88.js.map  197.012603d6.js  197.012603d6.js.map  221.b4cd7828.js  221.b4cd7828.js.map  249-legacy.c6b02f79.js  249-legacy.c6b02f79.js.map  316.027b63c3.js  (+107 more)
core/middlewares/: filter.go  prometheus.go
core/model/admin/: admin.go
core/model/music/: history.go
core/pkg/auth/: app.go  local.go
core/pkg/music/: local.go  music.go
core/router/: router.go
core/tls/rsa/: rsa.go
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/pkg/: init.rs
src-tauri/src/plugin/: db.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/lib/: init.rs
src/api/: index.js  local.js
src/base/mm-no-result/: mm-no-result.vue
src/components/lyric/: lyric.vue
src/components/mm-header/: mm-header.vue
src/components/music-btn/: music-btn.vue
src/components/music-list/: music-list.vue
src/pages/historyList/: historyList.vue
src/pages/localList/: localList.vue
src/pages/playList/: playList.vue
src/pages/search/: search.vue
src/router/: index.js
src/store/: actions.js
src/utils/: axios.js  localaxios.js
(+2 files in other folders)
